manifests/tenant1/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant1
  labels:
    tenant: tenant1
    environment: production
